--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "algarsal.github.io"
 title: "Tutoriales y reflexiones"
 description: |
   Tutoriales y reflexiones
-output_dir: "docs"
+output_dir: "."
 navbar:
   right:
     - text: "Home"
