--- a/_site.yml
+++ b/_site.yml
@@ -2,11 +2,11 @@ name: "algarsal.github.io"
 title: "Tutoriales y reflexiones"
 description: |
   Tutoriales y reflexiones
-output_dir: "."
+output_dir: "docs"
 navbar:
   right:
     - text: "Home"
       href: index.html
     - text: "About"
-      href: about.html
+      href: docs/about.html
 output: distill::distill_article
